--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,8 @@
 galaxy_info:
-  author: your name
+  author: Clemens Kaserer
   description: your role description
-  company: your company (optional)
+  company: Gepardec IT Services GmbH
+  role_name: k3s-bastion
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
