updated travis dist

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,5 @@
 galaxy_info:
-  author: Clemens Kaserer
+  author: ckaserer
   description: your role description
   company: Gepardec IT Services GmbH
   role_name: k3s-bastion
