--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,10 @@
 ---
-# defaults file for bastion
+
+bastion_hostname: "bastion"
 dhcpcd_conf_location: "/etc/dhcpcd.conf"
 dhcpcd_interface: "eth0"
 dhcpcd_dns: "10.0.0.1"
 dhcpcd_router: "10.0.0.1"
+dhcpcd_ip_address: "10.0.0.1/24"
+
+...
