--- a/roles/common/tasks/create_users.yml
+++ b/roles/common/tasks/create_users.yml
@@ -1,11 +1,9 @@
-
-
 - name: "Create user accounts and add users to groups"
   user:
     name: "{{ item }}"
     create_home: yes
     password: "{{ 'changeme' | password_hash('sha512') }}" 
     update_password: always
-    groups: "www-data"
+    groups: "www-data, {{ item }}"
   with_items: "{{ users }}"
-  tags: installation, setup, users
+  tags: create_user
