--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -4,3 +4,5 @@
 - include: create_users.yml
 - include: add_ssh_key_to_tech.yml
 - include: add_ssh_keys.yml
+- include: disable_password_auth.yml
+- include: change_pi_pwd.yml
