--- a/roles/pi_setup/tasks/main.yml
+++ b/roles/pi_setup/tasks/main.yml
@@ -1,3 +1,3 @@
 # tasks file for roles/pi_setup
-- include: pi_setup_workflox.yml
+- include: pi_setup_workflow.yml
 - include: config_local_time.yml
