--- a/roles/pi_setup/tasks/static_ip.yml
+++ b/roles/pi_setup/tasks/static_ip.yml
@@ -10,7 +10,7 @@
     state: present
   with_items:
     - { regexp: "^interface wlan[0-9]$", line: "interface wlan0" }
-    - { regexp: "^static ip_address", line: "static ip_address=192.168.0.51" }
+    - { regexp: "^static ip_address", line: "static ip_address=192.168.0.51/24" }
     - { regexp: "^static routers", line: "static routers=192.168.1.51" }
     - { regexp: "^static domain_name_servers", line: "static domain_name_servers=8.8.8.8" }
   notify: reboot_ssh
