-- moved yml's from common to authentication folder -- created an all_user.yml file which includes the pi user. -- changed the variable for ssh creation to the all_users.yml file. -- changed the playbook.yml variable to all_users.yml

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,8 +1,8 @@
-- hosts: bastion
+- hosts: pi
   become: yes
   vars_files:
     - group_vars/all/users.yml   
   roles:
-    -  common
+    -  authenitication
   tags: 
     bastion
