--- a/roles/authenitication/tasks/add_ssh_keys.yml
+++ b/roles/authenitication/tasks/add_ssh_keys.yml
@@ -4,13 +4,13 @@
     ssh-keygen -q -b 2048 -t rsa -N "" -C "creating SSH" -f ~/.ssh/{{ item }}_id_rsa
     creates="~/.ssh/{{ item }}_id_rsa
   with_items: "{{ users }}"
-  tags: create keys
+  tags: create_keys
 
 - name: "SSH public key for '{{ item }}'"
   authorized_key:
     user: "{{ item }}"
     state: "present"
     key: "{{ lookup('file', '~/.ssh/{{ items }}_id_rsa.pub') }}"
-  with_items: "{{ users }}"
-  tags: all keys
+  with_items: "{{ all_users }}"
+  tags: setup_keys
 
