--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,8 @@
 - hosts: pi
   become: yes
   vars_files:
-    - group_vars/all/users.yml   
+    - group_vars/all/users.yml
+    - group_vars/all/all_users.yml
   roles:
     -  authenitication
   tags: 
