--- a/roles/authenitication/tasks/add_ssh_keys.yml
+++ b/roles/authenitication/tasks/add_ssh_keys.yml
@@ -1,9 +1,9 @@
 
 - name: "SSH Generation"
   shell: >
-    ssh-keygen -q -b 2048 -t rsa -N "" -C "creating SSH" -f ~/.ssh/{{ item }}_id_rsa
+    ssh-keygen -q -b 2048 -t rsa -N "" -C "Creating SSH" -f ~/.ssh/{{ item }}_id_rsa
     creates="~/.ssh/{{ item }}_id_rsa
-  with_items: "{{ users }}"
+  with_items: "{{ all_users }}"
   tags: create_keys
 
 - name: "SSH public key for '{{ item }}'"
