--- a/roles/authenitication/tasks/create_users.yml
+++ b/roles/authenitication/tasks/create_users.yml
@@ -1,6 +1,6 @@
 - name: "Create user accounts and add users to groups"
   user:
-    name: "{{ items }}"
+    name: "{{ item }}"
     create_home: yes
     password: "{{ 'changeme' | password_hash('sha512') }}" 
     update_password: always
