--- a/roles/authenitication/tasks/create_users.yml
+++ b/roles/authenitication/tasks/create_users.yml
@@ -5,5 +5,16 @@
     password: "{{ 'changeme' | password_hash('sha512') }}"
     update_password: always
     groups: "www-data, {{ item }}, sudoers"
-  with_items: "{{ users }}"
+    loop:
+      - pi
+      - amayer
+      - tech
+      - ckaserer
+      - drasztovich
+      - fhochleitner
+      - jriegler
+      - pholzer
+      - pwurm
+      - therzog
+
   tags: create_users
