-- changed host and playbook_create_users.yml

--- a/playbook_create_users.yml
+++ b/playbook_create_users.yml
@@ -1,7 +1,7 @@
-- hosts: bastion
+- hosts: bastion-host
   become: yes
   vars_files:
     - group_vars/all/users.yml
   roles:
     -  authentication
-  tags: bastion
+  tags: users
