--- a/roles/pi_setup/tasks/setup_users.yml
+++ b/roles/pi_setup/tasks/setup_users.yml
@@ -5,6 +5,6 @@
     create_home: yes
     password: "{{ 'changeme' | password_hash('sha512') }}"
     update_password: always
-    groups: "www-data, {{ item }}"
+    groups: "www-data"
   with_items: "{{ users }}"
   tags: create_users
