--- a/playbook_implement_ssh_keys.yml
+++ b/playbook_implement_ssh_keys.yml
@@ -1,7 +1,7 @@
 - hosts: bastion-host
   become: yes
   vars_files:
-    - group_vars/all/users.yml
+    - group_vars/all/all_users.yml
   roles:
     -  ssh
   tags: users
