--- a/group_vars/all/all_users.yml
+++ b/group_vars/all/all_users.yml
@@ -1,11 +1,11 @@
-users:
-  - pi
-  - tech
-  - ckaserer
-  - amayer
-  - drasztovich
-  - fhochleitner
-  - jriegler
-  - pholzer
-  - pwurm
-  - therzog
+all_users:
+    - pi
+    - tech
+    - ckaserer
+    - amayer
+    - drasztovich
+    - fhochleitner
+    - jriegler
+    - pholzer
+    - pwurm
+    - therzog
