--- a/roles/ssh/tasks/add_ssh_key_to_tech.yml
+++ b/roles/ssh/tasks/add_ssh_key_to_tech.yml
@@ -2,5 +2,5 @@
   authorized_key:
     user: "tech"
     state: "present"
-    key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
+    key: "{{ lookup('file', '~/.ssh/id.rsa.pub') }}"
   tags: tech user, key tech
