--- a/roles/ssh/tasks/add_ssh_keys.yml
+++ b/roles/ssh/tasks/add_ssh_keys.yml
@@ -3,7 +3,7 @@
   authorized_key:
     user: "{{ item }}"
     state: "present"
-    key: "{{ lookup('file', '~/.ssh/{{ items }}.id_rsa.pub') }}"
+    key: "{{ lookup('file', '~/.ssh/{{ item }}.id_rsa.pub') }}"
   with_items: "{{ all_users }}"
   tags: setup_keys
 
